# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  spec.yaml  zz_backup.txt  zz_health_check(백업).txt  zz_lib(백업).txt  zz_main(백업).txt  zz_rust.txt  zz_study.txt
configuration/: base.yaml  configuration.yaml  local.yaml  production.yaml
migrations/: 20250120081933_create_subscriptions_table.sql  20250206061236_make_status_not_null_in_subscriptions.sql  20250206062146_create_subscription_tokens_table.sql  20250211073752_alter_column_subscription_tokens.sql  20250227065620_seed_user.sql  20250305070641_create_idempotency_table.sql  20250306051426_modify_idempotency_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  mod.rs  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
